[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/fonts/title_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/main_menu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://ui/main_menu/MainButtons.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/main_menu/new_game/NewGameInfo.tscn" type="PackedScene" id=5]

[node name="MainMenu" type="Control"]
margin_right = 960.0
margin_bottom = 540.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.39, 0.39, 0.39, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameName" type="Label" parent="."]
anchor_right = 1.0
margin_top = 24.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 2 )
text = "Blorgs"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameInfo" parent="." instance=ExtResource( 5 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 660.0
margin_bottom = 233.0

[node name="MainButtons" parent="." instance=ExtResource( 4 )]

[connection signal="on_cancel" from="NewGameInfo" to="." method="_on_NewGameInfo_on_cancel"]
[connection signal="_connect_to_game" from="MainButtons" to="." method="_on_MainButtons__connect_to_game"]
[connection signal="_new_game" from="MainButtons" to="." method="_on_MainButtons__new_game"]
